fixed z-index issue with lite-nav

--- a/scss/_lite-nav.scss
+++ b/scss/_lite-nav.scss
@@ -63,6 +63,7 @@
 
       .sub-menu {
         position: relative;
+        z-index: 1;
 
         &:hover {
           > .menu-list {
